fix pup-up button

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                             </p>
                             <div class="info-promo__process">
                                 <p>Cooking process:</p>
-                                <button type="button" data-popup="#popup-youtube" data-popup-youtube="_jOMIdietUQ"
+                                <a href="#" data-popup="#popup-youtube" data-popup-youtube="_jOMIdietUQ"
                                     class="info-promo__button button-promo">
                                     <div class="button-promo__img _ibg">
                                         <picture><source srcset="img/promo/pizza-small.webp" type="image/webp"><img src="img/promo/pizza-small.jpg" alt="pizza"></picture>
                                     </div>
                                     <span></span>
-                                </button>
+                                </a>
                             </div>
                             <div class="info-promo__actions" data-da=".info-promo,991.98,2">
                                 <a href="#" class="info-promo__order btn gradient">To order</a>
